kubernetes/test/app-test-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-test
  labels:
    app: flask-api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api-test
  template:
    metadata:
      labels:
        app: flask-api-test
    spec:
      containers:
        - name: flask-api-test
          imagePullPolicy: Always
          image: jasmineeds/tectonic-tantrums:v1.2.2
          ports:
          - containerPort: 5000
          env:
          - name: LOG_LEVEL
            value: "DEBUG"
          - name: PYTHONPATH
            value: "src"
          - name: REDIS_HOST
            value: "redis-service-test"
          command: ["python3", "src/api.py"]
