kubernetes/test/app-test-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment-test
  labels:
    app: redis-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-test
  template:
    metadata:
      labels:
        app: redis-test
    spec:
      containers:
        - name: redis-test
          image: redis:7
          ports:
          - containerPort: 6379
