kubernetes/test/app-test-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment-test
  labels:
    app: worker-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-test
  template:
    metadata:
      labels:
        app: worker-test
    spec:
      containers:
        - name: worker-test
          image: jasmineeds/tectonic-tantrums:v1.3.0
          imagePullPolicy: Always
          env:
          - name: LOG_LEVEL
            value: "DEBUG"
          - name: REDIS_HOST
            value: "redis-service-test"
          command: ["python3", "src/worker.py"]
