kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service-test
spec:
  type: ClusterIP
  selector:
    app: flask-api-test
  ports:
  - name: flask-api-test
    port: 5000
    targetPort: 5000
