kubernetes/test/app-test-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service-test
spec:
  type: ClusterIP
  selector:
    app: redis-test
  ports:
  - name: redis-test
    port: 6379
    targetPort: 6379
